[gd_scene load_steps=4 format=3 uid="uid://bna6lcmwx6e22"]

[ext_resource type="PackedScene" uid="uid://y7rt1fkggvb0" path="res://scenes/block_environment/g_block_schema/g_block_schema.tscn" id="1_54gbm"]
[ext_resource type="Script" path="res://scenes/block_environment/Control.gd" id="3_1xnwo"]
[ext_resource type="Script" path="res://scenes/block_environment/ContextMenu.gd" id="4_i0wvd"]

[node name="BlockEnvironment" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="SubViewport"]

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewport/Camera2D"]
layer = -1

[node name="Control" type="Control" parent="SubViewport/Camera2D/CanvasLayer" node_paths=PackedStringArray("camera")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_1xnwo")
camera = NodePath("../..")

[node name="GBlockSchema" parent="SubViewport" instance=ExtResource("1_54gbm")]

[node name="ContextMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 2
script = ExtResource("4_i0wvd")

[node name="VBoxContainer" type="VBoxContainer" parent="ContextMenu"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ContextMenu/VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="ContextMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 5
selected = 1
popup/item_0/text = "Начальный блок"
popup/item_0/id = 0
popup/item_1/text = "Блок действия"
popup/item_1/id = 1
popup/item_2/text = "Блок если"
popup/item_2/id = 2
popup/item_3/text = "Блок объединения"
popup/item_3/id = 3
popup/item_4/text = "Конечный блок"
popup/item_4/id = 4

[node name="Button" type="Button" parent="ContextMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Создать"

[connection signal="gui_input" from="SubViewport/Camera2D/CanvasLayer/Control" to="SubViewport/Camera2D/CanvasLayer/Control" method="_on_gui_input"]
[connection signal="mouse_entered" from="SubViewport/Camera2D/CanvasLayer/Control" to="SubViewport/Camera2D/CanvasLayer/Control" method="_on_mouse_entered"]
[connection signal="pressed" from="ContextMenu/VBoxContainer/HBoxContainer/Button" to="ContextMenu" method="_on_button_pressed"]
